--- a/GridViewApp/res/layout/activity_single_view.xml
+++ b/GridViewApp/res/layout/activity_single_view.xml
@@ -8,8 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SingleViewActivity" >
 
-    <ImageButton
-        android:id="@+id/imageButton1"
+    <ImageView
+        android:id="@+id/imageview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -17,5 +17,7 @@
         android:layout_marginRight="142dp"
         android:layout_marginTop="142dp"
         android:src="@drawable/sample_0" />
+    
+    
 
 </RelativeLayout>
